<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/itemCard"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ItemPage">


    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="0dp"
        android:layout_height="298dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:layout_constraintVertical_bias="1.0"
        tools:context=".MapView" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="25dp"
        app:layout_constraintBottom_toTopOf="@id/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.078" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textSize="15dp"
        app:layout_constraintBottom_toTopOf="@id/loctitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintVertical_bias="0.078" />


    <TextView
        android:id="@+id/loctitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:text="Recycling Centers that will accept this:"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/locations"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.096"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description"
        app:layout_constraintVertical_bias="0.2" />

    <TableLayout
        android:id="@+id/locations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stretchColumns="1"
        app:layout_constraintBottom_toTopOf="@+id/map"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loctitle"
        app:layout_constraintVertical_bias="0.994">

        <TableRow>

            <TextView
                android:id="@+id/location1"
                android:layout_width="107dp"
                android:padding="3dip"
                android:text="loc1"
                android:textSize="12dp"/>

            <TextView
                android:id="@+id/distance1"
                android:gravity="right"
                android:padding="3dip"
                android:text="dist1"
                android:textSize="12dp" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/location2"
                android:padding="3dip"
                android:text="loc2"
                android:textSize="12dp"/>

            <TextView
                android:id="@+id/distance2"
                android:gravity="right"
                android:padding="3dip"
                android:text="dist2"
                android:textSize="12dp" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/location3"
                android:padding="3dip"
                android:text="loc3"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/distance3"
                android:gravity="right"
                android:padding="3dip"
                android:text="dist3"
                android:textSize="12dp" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/location4"
                android:padding="3dip"
                android:text="loc4"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/distance4"
                android:gravity="right"
                android:padding="3dip"
                android:text="dist4"
                android:textSize="12dp" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/location5"
                android:padding="3dip"
                android:text="loc5"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/distance5"
                android:gravity="right"
                android:padding="3dip"
                android:text="dist5"
                android:textSize="12dp" />
        </TableRow>
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>